@@ -1,7 +1,8 @@
 # -*- sh -*-
 
-# version 2016-12-15
+# version 2016-12-16
 
+# + add in some internal U238 and Th232 from Pushpa slides (for testing)
 # + use real pmt K40 activities in mBq/pmt (from Estella)
 # + use real internal K40 activities in mBq/kg (from Estella)
 
@@ -28,27 +29,27 @@ D       6       data
 D       7       data
 D       8       data
 
-B       1       internal    K40      1.34      0.0001     0.001     10.0
-B       2       internal    K40      2.56      0.0001     0.001     10.0
-B       3       internal    K40      1.27      0.0001     0.001     10.0
-B       4       internal    K40      1.22      0.0001     0.001     10.0
-B       5       internal    K40      2.69      0.0001     0.001     10.0
-B       6       internal    K40      0.38      0.0001     0.001     10.0
-B       7       internal    K40      0.58      0.0001     0.001     10.0
-B       8       internal    K40      1.74      0.0001     0.001     10.0
+B       1       internal    K40      1.34e0    0.0001     0.001     10.0
+B       2       internal    K40      2.56e0    0.0001     0.001     10.0
+B       3       internal    K40      1.27e0    0.0001     0.001     10.0
+B       4       internal    K40      1.22e0    0.0001     0.001     10.0
+B       5       internal    K40      2.69e0    0.0001     0.001     10.0
+B       6       internal    K40      3.78e-1   0.0001     0.001     10.0
+B       7       internal    K40      5.82e-1   0.0001     0.001     10.0
+B       8       internal    K40      1.74e0    0.0001     0.001     10.0
 
-S       1       internal    U238     0.005     0.0001     0.001     10.0
-S       2       internal    U238     0.005     0.0001     0.001     10.0
-S       3       internal    U238     0.005     0.0001     0.001     10.0
+S       1       internal    U238     2.47e-3   0.0001     0.001     10.0
+S       2       internal    U238     1.28e-2   0.0001     0.001     10.0
+S       3       internal    U238     4.94e-4   0.0001     0.001     10.0
 S       4       internal    U238     0.005     0.0001     0.001     10.0
 S       5       internal    U238     0.005     0.0001     0.001     10.0
 S       6       internal    U238     0.005     0.0001     0.001     10.0
 S       7       internal    U238     0.005     0.0001     0.001     10.0
 S       8       internal    U238     0.005     0.0001     0.001     10.0
 
-S       1       internal    Th232    0.005     0.0001     0.001     10.0
-S       2       internal    Th232    0.005     0.0001     0.001     10.0
-S       3       internal    Th232    0.005     0.0001     0.001     10.0
+S       1       internal    Th232    1.29e-2   0.0001     0.001     10.0
+S       2       internal    Th232    1.95e-3   0.0001     0.001     10.0
+S       3       internal    Th232    7.72e-4   0.0001     0.001     10.0
 S       4       internal    Th232    0.005     0.0001     0.001     10.0
 S       5       internal    Th232    0.005     0.0001     0.001     10.0
 S       6       internal    Th232    0.005     0.0001     0.001     10.0
